# Upload_TgBot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  app.json  heroku.yml  pyproject.toml  requirements-dev.txt  requirements.txt
uploadtgbot/: __init__.py  __main__.py  bot_class.py  db.py  vars.py
uploadtgbot/db/: __init__.py  mongo.py  users.py
uploadtgbot/plugins/: broadcast.py  cancel.py  direct.py  download.py  start.py  stats.py
uploadtgbot/utils/: caching.py  constants.py  custom_filters.py  direct_dl.py  display_progress.py  joinCheck.py  mega_dl.py
