[tool.poetry]
name = "upload_tgbot"
version = "0.1.0"
description = "Telegram Bot to upload files from URL to Telegram"
authors = ["Divkix <23524935+Divkix@users.noreply.github.com>"]
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = "^3.7"
Pyrogram = "^1.2.9"
TgCrypto = "^1.2.2"
pyromod = {git = "https://github.com/usernein/pyromod"}
pySmartDL = "^1.3.4"
beautifulsoup4 = "^4.9.3"
lxml = "^4.6.3"
httpx = {extras = ["http2"], version = "^0.18.1"}
dnspython = "^2.1.0"
pickleDB = "^0.9.2"
cachetools = "^4.2.2"
pycryptodome = "^3.10.1"
aiofiles = "^0.7.0"
pymongo = "^3.11.4"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.8.0"
pre-commit = "^2.12.1"
pyclean = "^2.0.0"
pylint = "^2.7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
