[tool.poetry]
name = "upload_tgbot"
version = "1.5.3"
description = ""
authors = ["Divanshu Chauhan <23524935+Divkix@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Pyrogram = "~=1.2.9"
TgCrypto = "~=1.2.2"
pyromod = {git = "https://github.com/usernein/pyromod.git", rev = "2d71f19a821355ff9a4e1cd9fdbbf2a0990b482a"}
pySmartDL = "~=1.3.4"
beautifulsoup4 = "~=4.10.0"
lxml = "~=4.6.3"
httpx = {version = "~=0.19.0", extras = ["http2"]}
dnspython = "~=2.1.0"
pickleDB = "~=0.9.2"
cachetools = "~=4.2.4"
pycryptodome = "~=3.10.4"
aiofiles = "~=0.7.0"
pymongo = "~=3.12.0"

[tool.poetry.dev-dependencies]
black = "~=21.9b0"
isort = "~=5.9.3"
pre-commit = "~=2.15.0"
pyclean = "~=2.0.0"
pylint = "~=2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
